--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     <button type="button" class="btn btn-sm btn-default disabled">button</button>
     
     <button type="button" class="btn btn-lg btn-default disabled">button</button>
-    
-</body>
+    <div class="row">
+        <div class="col-sm-6"></div>
+        <div class="col-sm-6"></div>
+        <div class="col-sm-6"></div>
+    </div>  
 </html>
