--- a/index.html
+++ b/index.html
@@ -17,4 +17,7 @@
         <div class="col-sm-6"></div>
         <div class="col-sm-6"></div>
     </div>  
+    
+    <button type="button" class="btn btn-danger">button</button>
+    
 </html>
